--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
         * { box-sizing: border-box; }
         body { font-family: 'Cairo', sans-serif; background-color: var(--bg); margin: 0; display: flex; flex-direction: column; align-items: center; min-height: 100vh; padding: 20px; }
         
-        /* زر تبديل اللغة */
-        .lang-switch { position: absolute; top: 20px; right: 20px; }
+        .lang-switch { position: absolute; top: 20px; right: 20px; z-index: 100; }
         [dir="ltr"] .lang-switch { right: auto; left: 20px; }
-        .lang-btn { background: var(--primary); color: white; border: none; padding: 8px 16px; border-radius: 20px; cursor: pointer; font-family: inherit; font-weight: bold; }
+        .lang-btn { background: var(--primary); color: white; border: none; padding: 8px 16px; border-radius: 20px; cursor: pointer; font-family: inherit; font-weight: bold; font-size: 0.85rem; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
 
-        .container { width: 100%; max-width: 400px; text-align: center; margin-top: 40px; }
+        .container { width: 100%; max-width: 400px; text-align: center; margin-top: 50px; flex-grow: 1; }
         .logo { width: 110px; height: 110px; border-radius: 50%; background: var(--white); padding: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.08); margin-bottom: 15px; }
         
         h1 { font-size: 1.3rem; color: var(--primary); margin: 10px 0; }
@@ -28,20 +27,12 @@
         .btn-catalog { background-color: var(--orange); color: white; border: none; }
         .btn-catalog:hover { background-color: #d35400; }
 
-        /* الأيقونات السفلية */
         .social { margin-top: 30px; display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; }
         .social a { color: var(--primary); font-size: 1.4rem; transition: 0.3s; width: 45px; height: 45px; background: white; display: flex; align-items: center; justify-content: center; border-radius: 50%; box-shadow: 0 2px 5px rgba(0,0,0,0.05); text-decoration: none; }
         .social a:hover { transform: scale(1.1); color: var(--orange); }
 
-        /* الفوتر - تم حل مشكلة المسافة */
-        footer { margin-top: 40px; padding: 20px 0; font-size: 0.75rem; color: #888; width: 100%; text-align: center; }
-
-        /* تحسينات الموبايل */
-        @media (max-width: 480px) {
-            .container { margin-top: 60px; }
-            h1 { font-size: 1.15rem; }
-            .btn { padding: 12px; font-size: 0.9rem; }
-        }
+        footer { margin-top: 40px; padding: 20px 0; font-size: 0.75rem; color: #888; width: 100%; text-align: center; line-height: 1.8; }
+        footer a { color: var(--primary); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
@@ -86,35 +77,39 @@
         </div>
     </div>
 
-    <footer id="footerText">
-        © 2026 جميع الحقوق محفوظة لدار ألف باء تاء ناشرون
+    <footer>
+        <span id="copyText">© 2026 جميع الحقوق محفوظة لدار ألف باء تاء ناشرون</span><br>
+        <span id="devText">تطوير بواسطة</span> <a href="https://saasprite.com/bio" id="devLink">SaaSprite AI</a>
     </footer>
 
     <script>
         function toggleLang() {
-            const body = document.body;
             const html = document.documentElement;
             const btn = document.getElementById('langBtn');
             const arContent = document.getElementById('content-ar');
             const enContent = document.getElementById('content-en');
-            const footer = document.getElementById('footerText');
+            const copyText = document.getElementById('copyText');
+            const devText = document.getElementById('devText');
+            const devLink = document.getElementById('devLink');
 
             if (html.dir === "rtl") {
-                // تحويل للإنجليزية
                 html.dir = "ltr";
                 html.lang = "en";
                 btn.innerText = "عربي";
                 arContent.style.display = "none";
                 enContent.style.display = "block";
-                footer.innerText = "© 2026 Alef Baa Taa Publishers. All rights reserved.";
+                copyText.innerText = "© 2026 Alef Baa Taa Publishers. All rights reserved.";
+                devText.innerText = "Developed by";
+                devLink.href = "https://saasprite.com/bio-en";
             } else {
-                // تحويل للعربية
                 html.dir = "rtl";
                 html.lang = "ar";
                 btn.innerText = "English";
                 arContent.style.display = "block";
                 enContent.style.display = "none";
-                footer.innerText = "© 2026 جميع الحقوق محفوظة لدار ألف باء تاء ناشرون";
+                copyText.innerText = "© 2026 جميع الحقوق محفوظة لدار ألف باء تاء ناشرون";
+                devText.innerText = "تطوير بواسطة";
+                devLink.href = "https://saasprite.com/bio";
             }
         }
     </script>
