--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 arContent.style.display = "block";
                 enContent.style.display = "none";
                 copyText.innerText = "© 2026 جميع الحقوق محفوظة لدار ألف باء تاء ناشرون";
-                devText.innerText = "تطوير بواسطة";
+                devText.innerText = "طُوِّرَ بواسطة";
                 devLink.href = "https://saasprite.com/bio";
             }
         }
