--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ألف باء تاء ناشرون | Alef Baa Taa Publishers</title>
+    
+    <link rel="icon" type="image/png" href="favicon.png">
+    
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -79,7 +82,7 @@
 
     <footer>
         <span id="copyText">© 2026 جميع الحقوق محفوظة لدار ألف باء تاء ناشرون</span><br>
-        <span id="devText">تطوير بواسطة</span> <a href="https://saasprite.com/bio" id="devLink">SaaSprite AI</a>
+        <span id="devText">طُوِّر بواسطة</span> <a href="https://saasprite.com/bio" id="devLink" target="_blank">SaaSprite AI</a>
     </footer>
 
     <script>
@@ -108,7 +111,7 @@
                 arContent.style.display = "block";
                 enContent.style.display = "none";
                 copyText.innerText = "© 2026 جميع الحقوق محفوظة لدار ألف باء تاء ناشرون";
-                devText.innerText = "طُوِّرَ بواسطة";
+                devText.innerText = "طُوِّر بواسطة";
                 devLink.href = "https://saasprite.com/bio";
             }
         }
