--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ألف باء تاء ناشرون | Alef Baa Taa Publishers</title>
+    <title>ألف باء تاء ناشرون | Alef Baa Taa Nasheron</title>
     
     <link rel="icon" type="image/png" href="favicon.png">
     
