--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 btn.innerText = "عربي";
                 arContent.style.display = "none";
                 enContent.style.display = "block";
-                copyText.innerText = "© 2026 Alef Baa Taa Publishers. All rights reserved.";
+                copyText.innerText = "© 2026 Alef Baa Taa Nasheron. All rights reserved.";
                 devText.innerText = "Developed by";
                 devLink.href = "https://saasprite.com/bio-en";
             } else {
