--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div id="content-en" style="display: none;">
-            <h1>Alef Baa Taa Publishers</h1>
+            <h1>Alef Baa Taa Nasheron</h1>
             <p>An educational institution dedicated to producing and distributing educational tools and stories.</p>
             <div class="links">
                 <a href="https://abc-publishers.com/" class="btn" target="_blank"><i class="fas fa-globe"></i> Official Website</a>
