--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="https://www.instagram.com/abcpublishing/" class="btn" target="_blank"><i class="fab fa-instagram"></i> انستاغرام</a>
                 <a href="https://x.com/abcpublishers" class="btn" target="_blank"><i class="fab fa-x-twitter"></i> منصة إكس (تويتر)</a>
                 <a href="https://maps.app.goo.gl/eR4MXYG9UhuQzNE89" class="btn" target="_blank"><i class="fas fa-map-marker-alt"></i> موقعنا على الخريطة</a>
-                <a href="https://acrobat.adobe.com/id/urn:aaid:sc:AP:d08abf1f-05ed-4ee2-a32e-f48f36d919a1" class="btn btn-catalog" target="_blank"><i class="fas fa-file-pdf"></i> تحميل الكتالوج</a>
+                <a href="https://acrobat.adobe.com/id/urn:aaid:sc:AP:d08abf1f-05ed-4ee2-a32e-f48f36d919a1" class="btn btn-catalog" target="_blank"><i class="fas fa-file-pdf"></i> مشاهدة الكتالوج</a>
             </div>
         </div>
 
@@ -71,7 +71,7 @@
                 <a href="https://www.instagram.com/abcpublishing/" class="btn" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
                 <a href="https://x.com/abcpublishers" class="btn" target="_blank"><i class="fab fa-x-twitter"></i> X (Twitter)</a>
                 <a href="https://maps.app.goo.gl/eR4MXYG9UhuQzNE89" class="btn" target="_blank"><i class="fas fa-map-marker-alt"></i> Find us on Maps</a>
-                <a href="https://acrobat.adobe.com/id/urn:aaid:sc:AP:d08abf1f-05ed-4ee2-a32e-f48f36d919a1" class="btn btn-catalog" target="_blank"><i class="fas fa-file-pdf"></i> Download Catalog</a>
+                <a href="https://acrobat.adobe.com/id/urn:aaid:sc:AP:d08abf1f-05ed-4ee2-a32e-f48f36d919a1" class="btn btn-catalog" target="_blank"><i class="fas fa-file-pdf"></i> View Catalog</a>
             </div>
         </div>
 
