--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="social">
-            <a href="mailto:abcpublishing@hotmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:alefbaataanasheron@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="tel:+962795626802" title="Phone"><i class="fas fa-phone"></i></a>
             <a href="https://wa.me/962795626802" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
         </div>
