--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         <div id="content-ar">
             <h1>ألف باء تاء ناشرون</h1>
-            <p>مؤسسة تربوية تُعنى بإنتاج وتوزيع الوسائل التعليمية والقصص</p>
+            <p>اذا كان العالم يبحث عن طفل مبدع نحن نعمل على صناعته</p>
             <div class="links">
                 <a href="https://abc-publishers.com/" class="btn" target="_blank"><i class="fas fa-globe"></i> الموقع الرسمي</a>
                 <a href="https://wa.me/962795626802" class="btn" target="_blank"><i class="fab fa-whatsapp"></i> اطلب عبر واتساب</a>
@@ -63,7 +63,7 @@
 
         <div id="content-en" style="display: none;">
             <h1>Alef Baa Taa Nasheron</h1>
-            <p>An educational institution dedicated to producing and distributing educational tools and stories.</p>
+            <p>If the world is looking for a creative child, we are working to create one.</p>
             <div class="links">
                 <a href="https://abc-publishers.com/" class="btn" target="_blank"><i class="fas fa-globe"></i> Official Website</a>
                 <a href="https://wa.me/962795626802" class="btn" target="_blank"><i class="fab fa-whatsapp"></i> Order via WhatsApp</a>
